--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,24 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DuckTiveTwo"
         tools:targetApi="31">
+
+        <activity android:name=".Splashscreen"
+            android:exported="true"
+            android:theme="@style/Splashscreen">
+
+        </activity>
+        <activity
+            android:name=".MainActivity2"
+            android:exported="false" />
+        <activity
+            android:name=".BottomActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ActivityBottomMenu"
+            android:exported="false" />
+        <activity
+            android:name=".MenuNavigation"
+            android:exported="false" />
         <activity
             android:name=".Notifications"
             android:exported="false" />
@@ -35,12 +53,17 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
         </activity>
     </application>
 
