--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,48 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DuckTiveTwo"
         tools:targetApi="31">
-        <activity
-            android:name=".ExpenseTracking"
-            android:exported="false" />
+
         <activity
             android:name=".Menu"
             android:exported="false" />
+
+        <activity
+            android:name=".Tasks"
+            android:exported="false" />
+
+        <activity
+            android:name=".Habits"
+            android:exported="false" />
+
+        <activity
+            android:name=".Expense1"
+            android:exported="false" />
+
+        <activity
+            android:name=".Goals"
+            android:exported="false" />
+
+        <activity
+            android:name=".ChangePass"
+            android:exported="false" />
+
+        <activity
+            android:name=".HabitInput"
+            android:exported="false" />
+
+        <activity
+            android:name=".TaskInput"
+            android:exported="false" />
+
+        <activity
+            android:name=".Notifications"
+            android:exported="false" />
+
+        <activity
+            android:name=".DucktiveCompanion"
+            android:exported="false" />
+
+
         <activity
             android:name=".IntroDuke"
             android:exported="false" />
@@ -30,6 +66,19 @@
         <activity
             android:name=".SignUp"
             android:exported="false" />
+
+        <activity
+            android:name=".GoalsCompleted"
+            android:exported="false" />
+
+        <activity
+            android:name=".Profile"
+            android:exported="false" />
+
+        <activity
+            android:name=".Expense2Activity"
+            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
