--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,8 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".CompanionActivity" />
+        <activity
             android:name=".ExpenseFragment11"
             android:exported="false" />
         <activity
