--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.DuckTiveTwo"
         tools:targetApi="31" >
         <activity
+            android:name=".tasks_history"
+            android:exported="false" />
+        <activity
+            android:name=".Achievements"
+            android:exported="false" />
+        <activity
             android:name=".Splashscreen"
             android:exported="true" >
             <intent-filter>
@@ -23,8 +29,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".CompanionActivity" />
+        <activity android:name=".CompanionActivity" />
         <activity
             android:name=".ExpenseFragment11"
             android:exported="false" />
